# feluda

./: .buildinfo  .dockerignore  .favorites.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PRIVACY_POLICY.md  README.html  README.md  SECURITY.md  VideoAnalyzer.py  analyze.py  analyzer.py  application.py  applicationTests.py  benchmarking.html  contributing.html  db.py  dbTests.py  docker-compose-standalone.yml  docker-compose.yml  env_template  genindex.html  import pytest  index.html  install.html  install_torch.sh  json_db.json  objects.inv  packages_to_publish.txt  privacy_policy.md  py-modindex.html  pyproject.toml  quickstart.html  requirements-orig.txt  requirements.in  requirements.txt  (+10 more)
.ci/: docker-compose.yml
.ebextensions/: 01packages.config  wsgi.conf
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: DMP_2024.yml
.github/workflows/: bandit.yml  benchmarks.yml  docker-push-audiovec-worker-staging.yml  docker-push-hash-worker-staging.yml  docker-push-md5hash-worker-staging.yml  docker-push-media-worker-staging.yml  docker-push-vidvec-benchmark-test.yml  docker-push-vidvec-benchmark.yml  docker-push-vidvec-worker-staging.yml  docker-push-vidvec.yml  merge-dev-hotfix.yml  merge-main.yml  operator-test.yml  pr-security.yml  pr-tests.yml  prod-deploy.yml  publish-to-pypi.yml  publish_docs.yml  scorecard.yml  staging-deploy.yml  version_bump.yml  weekly-benchmarks.yml
_modules/: index.html
_modules/feluda/: config.html  feluda.html  logger.html  operator.html
_sources/: README.md.txt  benchmarking.md.txt  contributing.md.txt  index.md.txt  install.md.txt  quickstart.md.txt
_sources/examples/: README.md.txt
api/: feluda.html  operators.html
api/operators/: classify_video_zero_shot.html  cluster_embeddings.html  detect_lewd_images.html  detect_text_in_image.html  detect_text_in_image_tesseract.html  dimension_reduction.html  image_vec_rep.html  image_vec_rep_resnet.html  vid_vec_rep.html  vid_vec_rep_clip.html  video_hash.html  video_hash_tmk.html
benchmark/: README.md  config.py  data_generator.py  main.py  profiler.py  report.py
benchmark/operators/: __init__.py  classify_video_zero_shot.py  cluster_embeddings.py  detect_lewd_images.py  detect_text_in_image_tesseract.py  dimension_reduction.py  image_vec_rep_resnet.py  vid_vec_rep_clip.py  video_hash_tmk.py
benchmark/results/: benchmark_results_20250822_003531.json  benchmark_results_20250822_003531.md  benchmark_results_20250822_003743.json  benchmark_results_20250822_003743.md  benchmark_results_20250825_191948.json  benchmark_results_20250825_191948.md  benchmark_results_20250829.json  benchmark_results_20250829.md
benchmark/vid_vec_rep_clip/: README.md  profiler.py
docs/: README.md  benchmarking.md  conf.py  gatsby-config.js  index.md  install.md  package-lock.json  package.json  pyproject_toml_best_practices.md  quickstart.md  requirements.in  requirements.txt
docs/api/: feluda.md  operators.md
docs/elasticsearch/: cheatsheet.md  create_indices.py
docs/examples/: 01_plot_tsne_videos.ipynb  README.md  classify_video_zero_shot.ipynb  compare_video_hashes.ipynb  detect_lewd_images.ipynb  find_text_in_newspaper.ipynb  (+1 more)
elasticsearch/: commands  create_indices.py  es_test.py
examples/: 01_plot_tsne_videos.ipynb  01_plot_tsne_videos_config.yml  01_video_embeddings_tsne_plot.ipynb  02_plot_cluster_videos.ipynb  03_classify_video_zero_shot.ipynb  03_classify_video_zeroshot.ipynb  03_plot_tsne_videos.ipynb  README.html  README.md  classify_video_zero_shot.html  compare_video_hashes.html  detect_lewd_images.html  find_text_in_newspaper.html  plot_cluster_images.html  plot_cluster_videos.html  plot_tsne_videos.html
experiments/: gen_sqlite.py  get_test_data.py  image_urls.txt  text_test.py  text_urls.txt
feluda/: __init__.py  base_operator.py  config.py  feluda.py  logger.py  operator.py  test_file.py
operators/: __init__.py
operators/audio_vec_embedding_clap/: audio_vec_embedding_clap.py  pyproject.toml  test.py
operators/classify_video_zero_shot/: README.md  __init__.py  classify_video_zero_shot.py  pyproject.toml  test.py
operators/cluster_embeddings/: README.md  __init__.py  cluster_embeddings.py  pyproject.toml  test.py  test_cluster_embeddings.py
operators/detect_lewd_images/: README.md  __init__.py  detect_lewd_images.py  pyproject.toml  test.py
operators/detect_text_in_image_tesseract/: README.md  __init__.py  detect_text_in_image_tesseract.py  pyproject.toml  test.py
operators/image_vec_rep/: README.md  __init__.py  image_vec_rep.py  pyproject.toml  test.py
operators/image_vec_rep_resnet/: README.md  __init__.py  image_vec_rep_resnet.py  pyproject.toml  test.py  test_image_vec_rep_resnet.py
operators/image_vec_rep_resnet/src/image_vec_rep_resnet/: __init__.py  image_vec_rep_resnet.py
operators/vid_vec_rep_clip/: OPTIMIZATION_NOTES.md  README.md  TECHNICAL_ANALYSIS.md  __init__.py  pyproject.toml  test.py  test_vid_vec_rep_clip.py  vid_vec_rep_clip.py
operators/video_hash_tmk/: README.md  __init__.py  pyproject.toml  test.py  video_hash_tmk.py
package_testing/: test.py  test_image_vec_rep_resnet.py
script/: bump.py  toml_dependencies_update_script.py
scripts/: bump_version.py  find_updated_packages.py  semantic_release_workflow.py  test_semantic_release.py  toml_dependencies_update_script.py  validate_pyproject_toml.py  validate_toml_files.py
src/: .env-template  Dockerfile  Dockerfile.test  base_requirements.in  base_requirements.txt  benchmark.sh  config-indexer.yml  config-server.yml  debug.py  dev_requirements.in  dev_requirements.txt  indexer.py  reporter.py  requirements.in  requirements.txt  server.py  test-config.yaml  test.env  test_feluda.py
templates/: application_template.html
tests/: image_vec_rep_resnet-config.yaml  test_image_vec_rep_resnet.py  text_test.py
video_analysis/: Untitled.ipynb  analyze.py  extract_frames.py  feature agglomeration test.ipynb  feature_selection.py
word2vec/: app.py  download_vecs.py  gen_sqlite.py  get_data.sh  sample.py  test_sqlite.py
(+550 files in other folders)
