[project]
name = "feluda"
version = "0.9.4"
description = "A configurable engine for analysing multi-lingual and multi-modal content."
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "author", email = "author@feluda.org" },
]
maintainers = [
    { name = "Maintainer", email = "maintainer@feluda.org" },
    { name = "Maintainer", email = "maintainer@feluda.org" },
]

license = { text = "GNU General Public License v3.0" }
license-files = ["LICENSE.md"]
keywords = [
    "multilingual",
    "multimodal",
    "indian-languages",
    "search",
    "deep-learning",
]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Multimedia :: Video/Image",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
