[project]
name = "feluda-audio-vec-embedding-clap"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.2",
    "transformers>=4.47.1",
    "torch>=2.5.1",
    "llvmlite>=0.43.0",
    "numpy<=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]
