[project]
name = "feluda-classify_video_zero_shot"
version = "0.1.3"
requires-python = ">=3.10"
dependencies = ["torch==2.4.0", "pillow==10.4.0", "transformers==4.44.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]
