[project]
name = "feluda-cluster-embeddings"
version = "0.1.2"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.6.0",
    "numpy>=2.2.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]
