[project]
name = "feluda-cluster-embeddings"
version = "0.1.3"
requires-python = ">=3.10"
dependencies = ["scikit-learn>=1.6.1", "numpy>=2.2.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.deptry]
package_module_name_map.torch = "torch"
package_module_name_map.torchvision = "torchvision"
package_module_name_map.numpy = "numpy"
package_module_name_map.pillow = "PIL"

# Ignore custom packages and internal imports
known_first_party = [
    "feluda",
    "operators",
    "feluda.*",
    "operators.*"
]

# Exclude irrelevant dependencies from unused checks
ignore = ["DEP002"]

# Exclude test and documentation directories
exclude = ["src", "tests", "examples"]