[project]
name = "feluda-detect-lewd-image"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["huggingface-hub>=0.30.2", "tensorflow>=2.19.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]
