[project]
name = "feluda-image-vec-rep-resnet"
version = "0.1.6"
requires-python = ">=3.10"
dependencies = [
    "feluda[image]",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "numpy>=1.26,<2.2.0",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]
