[project]
name = "image-vec-rep-resnet"
version = "0.1.0"

requires-python = ">=3.10"
dependencies = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "numpy==1.26.3",
    "pillow==11.0.0",
    "memray==1.12.0",
    "pyinstrument==4.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["image_vec_rep_resnet.py", "__init__.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
