[project]
name = "feluda-image-vec-rep-resnet"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=2.1.3",
    "pillow>=11.0.0",
    "memray>=1.14.0",
    "pyinstrument>=5.0.0",
]

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
tag_format = "image_vec_rep_resnet-{version}"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
