[project]
name = "feluda-image-vec-rep-resnet"
version = "0.1.3"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=2.2.1",
    "pillow>=11.1.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:project.version",
]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = [
    ".",
]
