[project]
name = "feluda-vid-vec-rep-clip"
version = "0.1.4"
requires-python = ">=3.10"
dependencies = [
    "feluda[video]",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.1",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]
