[project]
name = "feluda-video-hash-tmk"
version = "0.1.0"
description = "A Feluda operator for generating video perceptual hashes using TMK+PDQF algorithm"
requires-python = ">=3.10"
dependencies = ["ffmpeg-python>=0.2.0", "wget>=3.2", "feluda[video]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.semantic_release]
version_variable = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false
tag_format = "{name}-{version}"

[tool.hatch.build.targets.wheel]
packages = ["."]
